fix: configuration added to fix cors problem